@@ -24,5 +24,6 @@ glu = Gluon(glue1, glue2)
 glu.invert().bend(0.5).addLabel("\Pgluon", displace=0.25)
 
 fmlwriter = FeynMLWriter("test")
-print fmlwriter.diagramToXML(fd)
+fmlwriter.diagramToXML(fd)
+fmlwriter.close()
 
